pig game pop animation

--- a/projects/pig_game/pig_game.html
+++ b/projects/pig_game/pig_game.html
@@ -36,7 +36,7 @@
                     <p id="line-one">1</p>
                     <p id="line-two">1</p>
                     <p id="line-three">1</p>
-                    <p id="close-pop" class="close-pop">close</p>                    
+                    <p id="close-pop" class="close-pop">X</p>                    
                 </div>
                 <div class="score-box-two">
                     <p id="score-num-two">0</p>
