--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 						<div class="thumbnail-description">Spectrum V</div>
 					</div>
 					<div class="thumbnail-object pig-game">
-						<a href="projects/pig_game/pig_game.html"><img src="projects/pig_game/images/baby_pig.png" alt="pig game project"></a>
+						<a href="projects/pig_game/pig_game.html"><img src="projects/pig_game/images/baby_pig.svg" alt="pig game project"></a>
 					</div>
 				</div>
 
