--- a/projects/pig_game/pig_game.html
+++ b/projects/pig_game/pig_game.html
@@ -49,7 +49,7 @@
                     <p id="score-num-round-one">0</p>
                 </div>
                 <div id="dice-image" class="dice-image">
-                    <p><img id="dice" src="images/baby_pig.png" alt="dice"></p>
+                    <p><img id="dice" src="images/baby_pig.svg" alt="dice"></p>
                 </div>
                 <div class="round-score-two">                
                     <p id="score-num-round-two">0</p>
