--- a/index.html
+++ b/index.html
@@ -27,22 +27,20 @@
 				<h1>Hello! Welcome to my page</h1>
 				<p>Here are some of the tiny bits I am involved with...</p>
 				<div class="thumbnails">
-					<div class="thumbnail-object">
-						<a href="https://thinkingape46.github.io/Marie-Curie-tribute-page/" target="_blank"><img src="images/marie-curie.svg" alt="vector potrait of Marie Curie"></a>
-						<div class="thumbnail-description">Marie Curie</div>
+					<div class="thumbnail_object">
+						<a href="https://thinkingape46.github.io/Marie-Curie-tribute-page/" target="_blank"><img class="thumbnail_image" src="images/marie-curie.svg" alt="vector potrait of Marie Curie"></a>
+						<div class="thumbnail_description">Marie Curie</div>
 					</div>
-					<div class="thumbnail-object spectrumV">
-						<a href="projects/spectrumV/em_spectrum.html" target="_blank"><img src="projects/spectrumV/spectrumVthumb.png" alt="spectrumV_project"></a>
-						<div class="thumbnail-description">Spectrum V</div>
+					<div class="thumbnail_object spectrumV">
+						<a href="projects/spectrumV/em_spectrum.html" target="_blank"><img class="thumbnail_image" src="projects/spectrumV/spectrumVthumb.png" alt="spectrumV_project"></a>
+						<div class="thumbnail_description">Spectrum V</div>
 					</div>
-					<div class="thumbnail-object pig-game">
-						<a href="projects/pig_game/pig_game.html" target="_blank"><img src="projects/pig_game/images/baby_pig.svg" alt="pig game project"></a>
-						<div class="thumbnail-description">Play Pig</div>
+					<div class="thumbnail_object pig-game">
+						<a href="projects/pig_game/pig_game.html" target="_blank"><img class="thumbnail_image" src="projects/pig_game/images/baby_pig.svg" alt="pig game project"></a>
+						<div class="thumbnail_description">Play Pig</div>
 					</div>
 				</div>
 
 			</div>
-
-		</div>
 	</body>
 </html>
