add grid to CSS

--- a/projects/spectrumV/em_spectrum.html
+++ b/projects/spectrumV/em_spectrum.html
@@ -27,15 +27,15 @@
             <br>
             <h2>Inspired by Spectrum V by the Artist Ellsworth Kelly</h2>
 
-            <table>
-                <thead>
-                    <th id="violet"></th>
-                    <th id="indigo"></th>
-                    <th id="blue"></th>
-                    <th id="green"></th>
-                    <th id="teal"></th>
+            <div id="table">
+                <thead id="table">
+                    <div id="violet"></div>
+                    <div id="indigo"></div>
+                    <div id="blue"></div>
+                    <div id="green"></div>
+                    <div id="teal"></div>
                 </thead>
-            </table>
+            </div>
 			
 
 		</div>
