--- a/projects/spectrumV/em_spectrum.html
+++ b/projects/spectrumV/em_spectrum.html
@@ -25,7 +25,7 @@
 				</ul>
             </nav>
             <br>
-            <h2>Inspired by Spectrum V by the Artist Ellsworth Kelly</h2>
+            <h2 id="heading">Inspired by Spectrum V by the Artist Ellsworth Kelly</h2>
 
             <div id="table">
                 <thead id="table">
