added earth and astronout to welcome section

--- a/index.html
+++ b/index.html
@@ -17,11 +17,12 @@
         </ul>
     </nav>
     <section id="welcome-section">
-        <div class="welcome-section_text">
+        <!-- <div class="welcome-section_text">
             <h1 id="welcome-section_heading">Hello! This is Jagadeesh Kumar</h1>
             <h3 id="welcome-section_sub-heading">a Front End Developer</h3>
-        </div>
-
+        </div> -->
+		<img src="assets/images/earth.svg" id="earth" alt="svg drawing of earth at night">
+		<img src="assets/images/astronaut.svg" id="astronaut" alt="svg drawing of an astronaut">
         <a href="#projects" class="arrow-double-link"><img src="assets/images/arrow-double.svg" alt="" class="arrow-button"></a>        
     </section>
 
@@ -57,7 +58,10 @@
         </div>
     </footer>
 
-
+	<script>
+		console.log(window.innerHeight);
+		console.log(window.innerWidth);
+	</script>
     <script src="assets/scripts/scripts.js"></script>
 </body>
 </html>
