worked on space animations and SVG

--- a/index.html
+++ b/index.html
@@ -20,8 +20,10 @@
         <!-- <div class="welcome-section_text">
             <h1 id="welcome-section_heading">Hello! This is Jagadeesh Kumar</h1>
             <h3 id="welcome-section_sub-heading">a Front End Developer</h3>
-        </div> -->
-		<img src="assets/images/earth.svg" id="earth" alt="svg drawing of earth at night">
+		</div> -->
+		<div id="earth">			
+			<img src="assets/images/earth.svg" id="map" alt="svg drawing of earth at night">
+		</div>
 		<img src="assets/images/astronaut.svg" id="astronaut" alt="svg drawing of an astronaut">
         <a href="#projects" class="arrow-double-link"><img src="assets/images/arrow-double.svg" alt="" class="arrow-button"></a>        
     </section>
