adjust SVG images, edited welcome section and add media queries for the mobile screen.

--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&amp;display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Exo+2:ital,wght@0,100;0,200;0,300;0,400;0,600;0,700;1,100&amp;display=swap" rel="stylesheet">
     <link rel="stylesheet" href="assets/styles/styles.css">
-    <title>FreeCodeCamp Personal Portfolio</title>
+    <title>Jagadeesh Kumar - Web Developer</title>
 </head>
 <body>
     <nav id="navbar">
         <ul class="nav-list">
             <li class="nav-list_item"><a class="nav-link" href="#welcome-section">About Me</a></li>
-            <li class="nav-list_item"><a class="nav-link" href="#projects">Portfolio</a></li>
+            <li class="nav-list_item"><a class="nav-link" href="#projects">Work</a></li>
             <li class="nav-list_item"><a class="nav-link" href="#footer">Contact</a></li>
         </ul>
     </nav>
