added text in welcome text

--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" lang="en">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&amp;display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Exo+2:ital,wght@0,100;0,200;0,300;0,400;0,600;0,700;1,100&amp;display=swap" rel="stylesheet">
     <link rel="stylesheet" href="assets/styles/styles.css">
-    <title>Jagadeesh Kumar - Web Developer</title>
+    <title>Jagadeesh Kumar</title>
 </head>
 <body>
     <nav id="navbar">
@@ -17,10 +17,11 @@
         </ul>
     </nav>
     <section id="welcome-section">
-        <!-- <div class="welcome-section_text">
+        <div class="welcome-section_text">
+            <img src="assets/images/profile-picture.jpg" id="profile-picture" alt="my profile picture">
             <h1 id="welcome-section_heading">Hello! This is Jagadeesh Kumar</h1>
             <h3 id="welcome-section_sub-heading">a Front End Developer</h3>
-		</div> -->
+		</div>
 		<div id="earth">			
 			<img src="assets/images/earth.svg" id="map" alt="svg drawing of earth at night">
 		</div>
