fixed welcome screen for sizes < 400px

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <div class="welcome-section_text">
             <img src="assets/images/profile-picture.jpg" id="profile-picture" alt="my profile picture">
             <h1 id="welcome-section_heading">Hello! This is Jagadeesh Kumar</h1>
-            <h3 id="welcome-section_sub-heading">a Front End Developer</h3>
+            <h3 id="welcome-section_sub-heading">Front-end Developer</h3>
 		</div>
 		<div id="earth">			
 			<img src="assets/images/earth.svg" id="map" alt="svg drawing of earth at night">
