add favicon, tecnical skills and media queries

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" lang="en">
+    <link rel="shortcut icon" href="assets/images/favicon.ico" type="image/x-icon">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&amp;display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Exo+2:ital,wght@0,100;0,200;0,300;0,400;0,600;0,700;1,100&amp;display=swap" rel="stylesheet">
     <link rel="stylesheet" href="assets/styles/styles.css">
@@ -19,8 +20,10 @@
     <section id="welcome-section">
         <div class="welcome-section_text">
             <img src="assets/images/profile-picture.jpg" id="profile-picture" alt="my profile picture">
-            <h1 id="welcome-section_heading">Hello! This is Jagadeesh Kumar</h1>
-            <h3 id="welcome-section_sub-heading">Front-end Developer</h3>
+            <h1 id="welcome-section_heading">Greetings! My name is Jagadeesh Kumar</h1>
+            <h3 id="welcome-section_sub-heading">Front-end developer, designer and artist</h3>
+            <p id="welcome-section_description"><span class="text--bold">Technical Skills: </span>HTML5, CSS3, JavaScript, Responsive Web Design, Git, WebPack, InkScape</p>
+            <p id="welcome-section_description"><span class="text--bold">Strengths: </span>Passionate learner, good listener, customer foucus etc.</p>
 		</div>
 		<div id="earth">			
 			<img src="assets/images/earth.svg" id="map" alt="svg drawing of earth at night">
