--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
         <div class="welcome-section_text">
             <img src="assets/images/profile-picture.jpg" id="profile-picture" alt="my profile picture">
             <h1 id="welcome-section_heading">Greetings! My name is Jagadeesh Kumar</h1>
-            <h3 id="welcome-section_sub-heading">I am a front-end developer, designer and artist</h3>
+            <h3 id="welcome-section_sub-heading">Front-end developer, designer and artist</h3>
             <p id="welcome-section_description"><span class="text--bold">Technical Skills: </span>HTML5, CSS3, JavaScript, Responsive Web Design, Git, WebPack, InkScape</p>
-            <p id="welcome-section_description"><span class="text--bold">Strengths: </span>Passionate learner, good listener, customer foucus etc.</p>
+            <p id="welcome-section_description"><span class="text--bold">Core Strengths: </span>Passionate learner, good listener, customer foucus etc.</p>
 		</div>
 		<div id="earth">			
 			<img src="assets/images/earth.svg" id="map" alt="svg drawing of earth at night">
