--- a/index.html
+++ b/index.html
@@ -22,8 +22,23 @@
             <img src="assets/images/profile-picture.jpg" id="profile-picture" alt="my profile picture">
             <h1 id="welcome-section_heading">Greetings! My name is Jagadeesh Kumar</h1>
             <h3 id="welcome-section_sub-heading">Front-end developer, designer and artist</h3>
-            <p id="welcome-section_description"><span class="text--bold">Technical Skills: </span>HTML5, CSS3, JavaScript, Responsive Web Design, Git, WebPack, InkScape</p>
-            <p id="welcome-section_description"><span class="text--bold">Core Strengths: </span>Passionate learner, good listener, customer foucus etc.</p>
+            <div id="welcome-section_description">
+                <p>Languages</p>
+                <div class="languages">
+                    <div class="html language">
+                        <img class="html language_logo" src="assets/images/html5.svg" alt="logo of html">
+                        <p class="language_text">HTML</p>
+                    </div>
+                    <div class="language">
+                        <img class="css language_logo" src="assets/images/css3.svg" alt="logo of css">
+                        <p class="language_text">CSS</p>
+                    </div>
+                    <div class="language">
+                        <img class="css language_logo" src="assets/images/javascript.svg" alt="logo of javascript">
+                        <p class="language_text">JavaScript</p>
+                    </div>
+                </div>
+            </div>
 		</div>
 		<div id="earth">			
 			<img src="assets/images/earth.svg" id="map" alt="svg drawing of earth at night">
