--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" lang="en">
     <link rel="shortcut icon" href="assets/images/favicon.ico" type="image/x-icon">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&amp;display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Exo+2:ital,wght@0,100;0,200;0,300;0,400;0,600;0,700;1,100&amp;display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Amatic+SC&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="assets/styles/styles.css">
     <title>Jagadeesh Kumar</title>
 </head>
@@ -21,9 +21,9 @@
         <div class="welcome-section_text">
             <img src="assets/images/profile-picture.jpg" id="profile-picture" alt="my profile picture">
             <h1 id="welcome-section_heading">Greetings! My name is Jagadeesh Kumar</h1>
-            <h3 id="welcome-section_sub-heading">Front-end developer, designer and artist</h3>
+            <h3 id="welcome-section_sub-heading">Front-end developer and artist</h3>
             <div id="welcome-section_description">
-                <p>Languages</p>
+                <p class="skills">Languages</p>
                 <div class="languages">
                     <div class="html language">
                         <img class="html language_logo" src="assets/images/html5.svg" alt="logo of html">
@@ -51,21 +51,21 @@
         <p class="projects_text">These are some of the projects I have worked on.</p>
         <div class="project-grid">
             <div class="project-tile">
+                <a href="https://thinkingape46.github.io/FreeCodeCamp_product-landing-page/" target="_blank" class="project-link"><img class="project-image" src="assets/images/travel-site.jpg" alt="product landing page thumbnail"></a>
+                <p class="project-title">Product Landing Page</p>
+            </div>
+            <div class="project-tile">
                 <a href="https://thinkingape46.github.io/FreeCodeCamp_Marie-Curie-tribute-page/" target="_blank" class="project-link"><img class="project-image" src="assets/images/tribute-page.jpg" alt="tribute page thumbnail"></a>
                 <p class="project-title">Tribute Page</p>
             </div>
-            <div class="project-tile">
+            <!-- <div class="project-tile">
                 <a href="https://thinkingape46.github.io/FreeCodeCamp_survey-form/" target="_blank" class="project-link"><img class="project-image" src="assets/images/survey-form.jpg" alt="survey form thumbnail"></a>
                 <p class="project-title">Survey Form</p>
             </div>
             <div class="project-tile">
                 <a href="https://thinkingape46.github.io/FreeCodeCamp_technical-documentation/" target="_blank" class="project-link"><img class="project-image" src="assets/images/technical-documentation.jpg" alt="technical documentation thumbnail"></a>
                 <p class="project-title">Technical Documentation</p>
-            </div>
-            <div class="project-tile">
-                <a href="https://thinkingape46.github.io/FreeCodeCamp_product-landing-page/" target="_blank" class="project-link"><img class="project-image" src="assets/images/travel-site.jpg" alt="product landing page thumbnail"></a>
-                <p class="project-title">Product Landing Page</p>
-            </div>
+            </div> -->
         </div>
     </section>
 
