--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" lang="en">
     <link rel="shortcut icon" href="assets/images/favicon.ico" type="image/x-icon">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&amp;display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans+Condensed:wght@300&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Amatic+SC&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="assets/styles/styles.css">
     <title>Jagadeesh Kumar</title>
 </head>
@@ -19,9 +20,14 @@
     </nav>
     <section id="welcome-section">
         <div class="welcome-section_text">
-            <img src="assets/images/profile-picture.jpg" id="profile-picture" alt="my profile picture">
-            <h1 id="welcome-section_heading">Greetings! My name is Jagadeesh Kumar</h1>
-            <h3 id="welcome-section_sub-heading">Front-end developer and artist</h3>
+            <div id="about-me">
+                <div id="about-me_text">
+                    <h1 id="welcome-section_heading">My name is <span id="name">Jagadeesh Kumar</span></h1>
+                    <h3 id="welcome-section_sub-heading">Front-end developer and artist</h3>     
+                </div>            
+                <img src="assets/images/profile-picture.jpg" id="profile-picture" alt="my profile picture">
+            </div>
+
             <div id="welcome-section_description">
                 <p class="skills">Languages</p>
                 <div class="languages">
@@ -39,6 +45,8 @@
                     </div>
                 </div>
             </div>
+            <div class="background-bar-one"></div>
+            <div class="background-bar-two"></div>
 		</div>
 		<div id="earth">			
 			<img src="assets/images/earth.svg" id="map" alt="svg drawing of earth at night">
@@ -49,7 +57,12 @@
 
     <section id="projects">
         <p class="projects_text">These are some of the projects I have worked on.</p>
-        <div class="project-grid">
+        <section class="project">
+            <div class="project-head">
+                <div class="project-title"></div>
+            </div>
+        </section>
+        <!-- <div class="project-grid">
             <div class="project-tile">
                 <a href="https://thinkingape46.github.io/FreeCodeCamp_product-landing-page/" target="_blank" class="project-link"><img class="project-image" src="assets/images/travel-site.jpg" alt="product landing page thumbnail"></a>
                 <p class="project-title">Product Landing Page</p>
@@ -66,7 +79,7 @@
                 <a href="https://thinkingape46.github.io/FreeCodeCamp_technical-documentation/" target="_blank" class="project-link"><img class="project-image" src="assets/images/technical-documentation.jpg" alt="technical documentation thumbnail"></a>
                 <p class="project-title">Technical Documentation</p>
             </div> -->
-        </div>
+        </div> -->
     </section>
 
     <footer id="footer">
