--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <nav id="navbar">
         <ul class="nav-list">
             <li class="nav-list_item"><a class="nav-link" href="#welcome-section">About Me</a></li>
-            <li class="nav-list_item"><a class="nav-link" href="#projects">Work</a></li>
+            <li class="nav-list_item"><a class="nav-link" href="#projects">Projects</a></li>
             <li class="nav-list_item"><a class="nav-link" href="#footer">Contact</a></li>
         </ul>
     </nav>
@@ -22,8 +22,8 @@
         <div class="welcome-section_text">
             <div id="about-me">
                 <div id="about-me_text">
-                    <h1 id="welcome-section_heading">My name is <span id="name">Jagadeesh Kumar</span></h1>
-                    <h3 id="welcome-section_sub-heading">Front-end developer and artist</h3>     
+                    <p id="welcome-section_heading">My name is <span id="name">Jagadeesh Kumar</span></p>
+                    <p id="welcome-section_sub-heading">Front-end developer and artist</p>     
                 </div>            
                 <img src="assets/images/profile-picture.jpg" id="profile-picture" alt="my profile picture">
             </div>
@@ -56,12 +56,46 @@
     </section>
 
     <section id="projects">
-        <p class="projects_text">These are some of the projects I have worked on.</p>
-        <section class="project">
-            <div class="project-head">
-                <div class="project-title"></div>
+        <p id="projects__text">Projects</p>
+        <section class="project gotreks">
+            <div class="project__element project__head">
+                <div class="project__title">Go Treks</div>
+                <img src="assets/images/gotreks.svg" class="project__icon" alt="project icon">
+            </div>
+            <div class="project__element project__description">This is travel website I have created for a fictional company called Go Treks. This with HTML, CSS, and JavaScript and responsive for all the screens from desktop to small mobile. Logo and all the images are created by me and animated so that the website shall look more lively. I have even animated the logo.</div>
+            <div class="project__element project__technology">
+                <img src="assets/images/html5.svg" class="technology__member" alt="image of technology used for project">
+                <img src="assets/images/css3.svg" class="technology__member" alt="image of technology used for project">
+                <img src="assets/images/javascript.svg" class="technology__member" alt="image of technology used for project">
             </div>
         </section>
+
+        <section class="project gotreks">
+            <div class="project__element project__head">
+                <div class="project__title">Go Treks</div>
+                <img src="assets/images/gotreks.svg" class="project__icon" alt="project icon">
+            </div>
+            <div class="project__element project__description">This is travel website I have created for a fictional company called Go Treks. This with HTML, CSS, and JavaScript and responsive for all the screens from desktop to small mobile. Logo and all the images are created by me and animated so that the website shall look more lively. I have even animated the logo.</div>
+            <div class="project__element project__technology">
+                <img src="assets/images/html5.svg" class="technology__member" alt="image of technology used for project">
+                <img src="assets/images/css3.svg" class="technology__member" alt="image of technology used for project">
+                <img src="assets/images/javascript.svg" class="technology__member" alt="image of technology used for project">
+            </div>
+        </section>
+
+        <section class="project gotreks">
+            <div class="project__element project__head">
+                <div class="project__title">Go Treks</div>
+                <img src="assets/images/gotreks.svg" class="project__icon" alt="project icon">
+            </div>
+            <div class="project__element project__description">This is travel website I have created for a fictional company called Go Treks. This with HTML, CSS, and JavaScript and responsive for all the screens from desktop to small mobile. Logo and all the images are created by me and animated so that the website shall look more lively. I have even animated the logo.</div>
+            <div class="project__element project__technology">
+                <img src="assets/images/html5.svg" class="technology__member" alt="image of technology used for project">
+                <img src="assets/images/css3.svg" class="technology__member" alt="image of technology used for project">
+                <img src="assets/images/javascript.svg" class="technology__member" alt="image of technology used for project">
+            </div>
+        </section>
+
         <!-- <div class="project-grid">
             <div class="project-tile">
                 <a href="https://thinkingape46.github.io/FreeCodeCamp_product-landing-page/" target="_blank" class="project-link"><img class="project-image" src="assets/images/travel-site.jpg" alt="product landing page thumbnail"></a>
@@ -71,14 +105,14 @@
                 <a href="https://thinkingape46.github.io/FreeCodeCamp_Marie-Curie-tribute-page/" target="_blank" class="project-link"><img class="project-image" src="assets/images/tribute-page.jpg" alt="tribute page thumbnail"></a>
                 <p class="project-title">Tribute Page</p>
             </div>
-            <!-- <div class="project-tile">
+            <div class="project-tile">
                 <a href="https://thinkingape46.github.io/FreeCodeCamp_survey-form/" target="_blank" class="project-link"><img class="project-image" src="assets/images/survey-form.jpg" alt="survey form thumbnail"></a>
                 <p class="project-title">Survey Form</p>
             </div>
             <div class="project-tile">
                 <a href="https://thinkingape46.github.io/FreeCodeCamp_technical-documentation/" target="_blank" class="project-link"><img class="project-image" src="assets/images/technical-documentation.jpg" alt="technical documentation thumbnail"></a>
                 <p class="project-title">Technical Documentation</p>
-            </div> -->
+            </div>
         </div> -->
     </section>
 
