--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Amatic+SC&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="assets/styles/styles.css">
+	<meta name="google-site-verification" content="hHcgob94hTfKzDqe_BTHVgxOSfAOJ9TVq0DSFCgbygQ" />
     <title>Jagadeesh Kumar</title>
 </head>
 <body>
@@ -62,37 +63,25 @@
                 <div class="project__title">Go Treks</div>
                 <img src="assets/images/gotreks.svg" class="project__icon" alt="project icon">
             </div>
-            <div class="project__element project__description">This is travel website I have created for a fictional company called Go Treks. This with HTML, CSS, and JavaScript and responsive for all the screens from desktop to small mobile. Logo and all the images are created by me and animated so that the website shall look more lively. I have even animated the logo.</div>
+            <div class="project__element project__description">This is travel website for a fictional company called Go Treks with HTML, CSS, and JavaScript. The website is responsive for all the screens from mobile to desktop. Logo and all the images are created by me and animated so that the website shall look more lively.</div>
             <div class="project__element project__technology">
-                <img src="assets/images/html5.svg" class="technology__member" alt="image of technology used for project">
-                <img src="assets/images/css3.svg" class="technology__member" alt="image of technology used for project">
-                <img src="assets/images/javascript.svg" class="technology__member" alt="image of technology used for project">
+                <a class="technology__member" target="_blank" href="https://en.wikipedia.org/wiki/HTML"><img class="technology__image" src="assets/images/html5.svg" alt="image of technology used for project"></a>
+                <a class="technology__member" target="_blank" href="https://en.wikipedia.org/wiki/CSS"><img class="technology__image" src="assets/images/css3.svg" alt="image of technology used for project"></a>
+                <a class="technology__member" target="_blank" href="https://en.wikipedia.org/wiki/JavaScript"><img class="technology__image" src="assets/images/javascript.svg" alt="image of technology used for project"></a>
             </div>
         </section>
 
-        <section class="project gotreks">
+        <section class="project trip-visualizer">
             <div class="project__element project__head">
-                <div class="project__title">Go Treks</div>
-                <img src="assets/images/gotreks.svg" class="project__icon" alt="project icon">
+                <div class="project__title">Trip Visualizer</div>
+                <img src="assets/images/trip-visualizer.svg" class="project__icon" alt="project icon">
             </div>
-            <div class="project__element project__description">This is travel website I have created for a fictional company called Go Treks. This with HTML, CSS, and JavaScript and responsive for all the screens from desktop to small mobile. Logo and all the images are created by me and animated so that the website shall look more lively. I have even animated the logo.</div>
+            <div class="project__element project__description">Trip Visualizer is a simple web-app to visualize your GPX files on a map using Leaflet library. The files can be loaded from the local drive, there is no limit to no of files that can be loaded. As on 22 Oct 2020, the app only accepts files from local disc; as an update, I will add a stats section with several visualizations and also able to load files from 3rd party APIs such as Strava and Decathlon.</div>
             <div class="project__element project__technology">
-                <img src="assets/images/html5.svg" class="technology__member" alt="image of technology used for project">
-                <img src="assets/images/css3.svg" class="technology__member" alt="image of technology used for project">
-                <img src="assets/images/javascript.svg" class="technology__member" alt="image of technology used for project">
-            </div>
-        </section>
-
-        <section class="project gotreks">
-            <div class="project__element project__head">
-                <div class="project__title">Go Treks</div>
-                <img src="assets/images/gotreks.svg" class="project__icon" alt="project icon">
-            </div>
-            <div class="project__element project__description">This is travel website I have created for a fictional company called Go Treks. This with HTML, CSS, and JavaScript and responsive for all the screens from desktop to small mobile. Logo and all the images are created by me and animated so that the website shall look more lively. I have even animated the logo.</div>
-            <div class="project__element project__technology">
-                <img src="assets/images/html5.svg" class="technology__member" alt="image of technology used for project">
-                <img src="assets/images/css3.svg" class="technology__member" alt="image of technology used for project">
-                <img src="assets/images/javascript.svg" class="technology__member" alt="image of technology used for project">
+                <a class="technology__member" target="_blank" href="https://en.wikipedia.org/wiki/HTML"><img class="technology__image" src="assets/images/html5.svg" alt="image of technology used for project"></a>
+                <a class="technology__member" target="_blank" href="https://en.wikipedia.org/wiki/CSS"><img class="technology__image" src="assets/images/css3.svg" alt="image of technology used for project"></a>
+                <a class="technology__member" target="_blank" href="https://en.wikipedia.org/wiki/JavaScript"><img class="technology__image" src="assets/images/javascript.svg" alt="image of technology used for project"></a>
+                <a class="technology__member" target="_blank" href="https://en.wikipedia.org/wiki/Leaflet_(software)"><img class="technology__image" src="assets/images/leaflet.svg" alt="logo of leaflet library"></a>
             </div>
         </section>
 
