1. text for projects description modified. 2. bio added. 3. Earth image back on mobile screen.

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <div id="about-me_text">
                     <p id="welcome-section_heading">My name is <span id="name">Jagadeesh Kumar</span></p>
                     <p id="welcome-section_sub-heading">Front-end developer and artist</p>
-                    <p id="welcome-section__bio">I design and build user interfaces, and experiment with programming through javascript. I am also a artist who can create raster and vector images, and CSS animations.</p> 
+                    <p id="welcome-section__bio">I design and build user interfaces, and experiment with programming through javascript. I am also a artist who create raster and vector images, and CSS animations.</p> 
                 </div>            
                 <img src="assets/images/profile-picture.jpg" draggable="false" id="profile-picture" alt="my profile picture">
             </div>
