profile picture changed

--- a/index.html
+++ b/index.html
@@ -29,22 +29,22 @@
                     <p id="welcome-section_sub-heading">Front-end developer and artist</p>
                     <p id="welcome-section__bio">I design and build user interfaces, and experiment with programming through javascript. I am also a artist who create raster and vector images, and CSS animations.</p> 
                 </div>            
-                <img src="assets/images/profile-picture.jpg" draggable="false" id="profile-picture" alt="my profile picture">
+                <img src="assets/images/profile-picture.jpg" draggable="false" id="profile-picture" alt="profile picture">
             </div>
 
             <div id="welcome-section_description">
                 <p class="skills">Core Skills</p>
                 <div class="languages">
                     <div class="html language">
-                        <img  draggable="false" class="html language_logo" src="assets/images/html5.svg" alt="logo of html">
+                        <a class="technology__member" target="_blank" href="https://en.wikipedia.org/wiki/HTML"><img class="technology__image" src="assets/images/html5.svg" alt="logo of html5"></a>
                         <p class="language_text">HTML</p>
                     </div>
                     <div class="language">
-                        <img draggable="false" class="css language_logo" src="assets/images/css3.svg" alt="logo of css">
+                        <a class="technology__member" target="_blank" href="https://en.wikipedia.org/wiki/CSS"><img class="technology__image" src="assets/images/css3.svg" alt="logo of css"></a>
                         <p class="language_text">CSS</p>
                     </div>
                     <div class="language">
-                        <img draggable="false" class="css language_logo" src="assets/images/javascript.svg" alt="logo of javascript">
+                        <a class="technology__member" target="_blank" href="https://en.wikipedia.org/wiki/JavaScript"><img class="technology__image" src="assets/images/javascript.svg" alt="logo of javascript"></a>
                         <p class="language_text">JavaScript</p>
                     </div>
                 </div>
