marie curie project added, sitemap updated, and horizontal scroll removed

--- a/index.html
+++ b/index.html
@@ -61,6 +61,26 @@
 
     <section id="projects">
         <p id="projects__text">Projects</p>
+
+        <section class="project trip-visualizer">
+            <div class="project__element project__head">
+                <div class="project__title">GPX Chemin</div>
+                <a href="https://gpx-chemin.herokuapp.com/" target="_blank" class="project_link"><img src="assets/images/trip-visualizer.svg" class="project__icon" alt="project icon"></a>
+            </div>
+            <p class="project__element project__description">GPX Chemin is a simple web-app to visualize GPX files of sport activities. Leaflet library is used to render the map and Canvas for graph visualization. The files can be loaded from the local drive.</p>
+
+            <p class="project__element project__description">It renders the gpx track, graphs and tables for speed, elevation, heart rate etc. My plan for the future is to make the app pull activities through 3rd party APIs such as Strava and Decathlon.</p>
+
+            <p class="project__element project__description">This project hopefully showcase my ability to work with JavaScript, XML, Canvas, SVG and basic Express.js (backend).</p>
+
+            <div class="project__element project__technology">
+                <a class="technology__member" target="_blank" href="https://en.wikipedia.org/wiki/HTML"><img class="technology__image" src="assets/images/html5.svg" alt="image of technology used for project"></a>
+                <a class="technology__member" target="_blank" href="https://en.wikipedia.org/wiki/CSS"><img class="technology__image" src="assets/images/css3.svg" alt="image of technology used for project"></a>
+                <a class="technology__member" target="_blank" href="https://en.wikipedia.org/wiki/JavaScript"><img class="technology__image" src="assets/images/javascript.svg" alt="image of technology used for project"></a>
+                <a class="technology__member" target="_blank" href="https://en.wikipedia.org/wiki/Leaflet_(software)"><img class="technology__image" src="assets/images/leaflet.svg" alt="logo of leaflet library"></a>
+            </div>
+        </section>
+
         <section class="project gotreks">
             <div class="project__element project__head">
                 <div class="project__title">Go Treks</div>
@@ -77,43 +97,21 @@
             </div>
         </section>
 
-        <section class="project trip-visualizer">
+        <section class="project marie-curie">
             <div class="project__element project__head">
-                <div class="project__title">GPX Chemin</div>
-                <a href="https://gpx-chemin.herokuapp.com/" target="_blank" class="project_link"><img src="assets/images/trip-visualizer.svg" class="project__icon" alt="project icon"></a>
+                <div class="project__title">Marie Curie</div>
+                <a href="https://thinkingape46.github.io/marie-curie/" target="_blank" class="project_link"><img src="assets/images/marie-curie.svg" class="project__icon" alt="project icon"></a>
             </div>
-            <p class="project__element project__description">GPX Chemin is a simple web-app to visualize GPX files of sport activities. Leaflet library is used to render the map and Canvas for graph visualization. The files can be loaded from the local drive.</p>
+            <p class="project__element project__description">This is my simple static website I have made as a tribute for two time nobel prize winner Marie Curie.</p>
 
-            <p class="project__element project__description">This app is functional and meaningful, it does not just render the gpx track, also display the graphs and tables for speed, elevation, heart rate etc. My plan for the future is to make the app pull activities through 3rd party APIs such as Strava and Decathlon.</p>
-
-            <p class="project__element project__description">This project hopefully showcase my ability to work with JavaScript, XML, Canvas, SVG and basic Express.js (backend).</p>
+            <p class="project__element project__description">This project showcases my very basic skill of creating a meaningful site with html and css.</p>
 
             <div class="project__element project__technology">
                 <a class="technology__member" target="_blank" href="https://en.wikipedia.org/wiki/HTML"><img class="technology__image" src="assets/images/html5.svg" alt="image of technology used for project"></a>
                 <a class="technology__member" target="_blank" href="https://en.wikipedia.org/wiki/CSS"><img class="technology__image" src="assets/images/css3.svg" alt="image of technology used for project"></a>
-                <a class="technology__member" target="_blank" href="https://en.wikipedia.org/wiki/JavaScript"><img class="technology__image" src="assets/images/javascript.svg" alt="image of technology used for project"></a>
-                <a class="technology__member" target="_blank" href="https://en.wikipedia.org/wiki/Leaflet_(software)"><img class="technology__image" src="assets/images/leaflet.svg" alt="logo of leaflet library"></a>
             </div>
         </section>
 
-        <!-- <div class="project-grid">
-            <div class="project-tile">
-                <a href="https://thinkingape46.github.io/FreeCodeCamp_product-landing-page/" target="_blank" class="project-link"><img class="project-image" src="assets/images/travel-site.jpg" alt="product landing page thumbnail"></a>
-                <p class="project-title">Product Landing Page</p>
-            </div>
-            <div class="project-tile">
-                <a href="https://thinkingape46.github.io/FreeCodeCamp_Marie-Curie-tribute-page/" target="_blank" class="project-link"><img class="project-image" src="assets/images/tribute-page.jpg" alt="tribute page thumbnail"></a>
-                <p class="project-title">Tribute Page</p>
-            </div>
-            <div class="project-tile">
-                <a href="https://thinkingape46.github.io/FreeCodeCamp_survey-form/" target="_blank" class="project-link"><img class="project-image" src="assets/images/survey-form.jpg" alt="survey form thumbnail"></a>
-                <p class="project-title">Survey Form</p>
-            </div>
-            <div class="project-tile">
-                <a href="https://thinkingape46.github.io/FreeCodeCamp_technical-documentation/" target="_blank" class="project-link"><img class="project-image" src="assets/images/technical-documentation.jpg" alt="technical documentation thumbnail"></a>
-                <p class="project-title">Technical Documentation</p>
-            </div>
-        </div> -->
     </section>
 
     <footer id="footer">
@@ -125,11 +123,7 @@
             <a target="_blank" href="https://www.linkedin.com/in/jagadeesh59621/" class="profile-link"><img src="assets/images/linkedin.svg" alt="linkedin icon" class="linkedin social-icon social-icon--footer"></a>
         </div>
     </footer>
-
-	<script>
-		console.log(window.innerHeight);
-		console.log(window.innerWidth);
-	</script>
+    
     <script src="assets/scripts/scripts.js"></script>
 </body>
 </html>
